# network-security-analyzer

./: .gitignore  HELP_COMMANDS.md  LICENSE  README.md  cpp_usage_guide.sh  setup.py  test_build.sh
cpp/: CMakeLists.txt
cpp/include/: anomaly_detector.h  common.h  packet_analyzer.h  packet_capture.h  report_generator.h  statistical_analyzer.h  threat_detector.h  utils.h
cpp/src/: main.cpp  packet_capture.cpp  test_main.cpp
docs/: HOW_TO_USE.md  IMPLEMENTATION_DETAILS.md  REAL_WORLD_USAGE.md
examples/: basic_usage.py
python/: demo.py  real_world_examples.py  requirements.txt  security_report.html
python/src/: __init__.py  anomaly_detector.py  network_analyzer.py  packet_analyzer.py  packet_capture.py  report_generator.py  statistical_analyzer.py  threat_detector.py  utils.py
scripts/: build.sh
